Bug 1576372 - Check the validity of the DrawTarget before rendering SVG content into it. r=aosmond, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D43751

--HG--
extra : source : 4af7a75a66f2ac8918ef42d9da2eae4a62d7e6c5
extra : intermediate-source : 988125c1cc0803941ff485d7256e9a9df226ae49